# qbot-with-typ

./: Cargo.toml
resources/: help_message.txt
resources/help-messages/: help.txt  help_dep.txt  help_example.txt  help_tag.txt
src/: bot.rs  main.rs  qq_media.rs  worker.rs
tests/: pool_integration.rs
tests/fixtures/: mock_worker.py
