[package]
name = "qbot-with-typ"
version = "0.1.0"
edition = "2024"

[dependencies]
botrs = "0.2.5"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
libc = "0.2"
futures = "0.3"
owo-colors = "4.3.0"

[profile.release]
lto = "thin"
codegen-units = 1
